# kwconf-rs

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md
.github/workflows/: ci.yml
crates/kwconf/: Cargo.toml
crates/kwconf/examples/: basic.rs  kwconf_rs_full_app.rs  kwconf_rs_train.rs  modal.rs  nested.rs
crates/kwconf/src/: lib.rs
crates/kwconf/tests/: derive.rs  feature_matrix.rs  full_parity_example.rs  modal.rs  modal_feature_matrix.rs  parity.rs
crates/kwconf_derive/: Cargo.toml
crates/kwconf_derive/src/: lib.rs
docs/: contract.md  porting-from-kwconf.md  roadmap.md  side-by-side-parity-demo.md
examples/: basic.toml  modal.toml  nested.toml
examples/parity/: kwconf_train.py  train.toml
examples/parity_full/: README.md  eval.yaml  export.yaml  kwconf_app.py  train.yaml
