[workspace]
members = [
    "crates/kwconf",
    "crates/kwconf_derive",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Kitware/kwconf-rs"
rust-version = "1.76"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4.5", features = ["color", "suggestions", "string"] }
clap_complete = "4.5"
toml = "0.9"
yaml_serde = "0.10"
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full", "extra-traits"] }
