[package]
name = "kwconf"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "kwconf-style CLI and config resolution for Rust"
readme = "../../README.md"

[dependencies]
kwconf_derive = { path = "../kwconf_derive" }
serde.workspace = true
serde_json.workspace = true
clap.workspace = true
clap_complete.workspace = true
toml.workspace = true
yaml_serde.workspace = true

[dev-dependencies]
serde.workspace = true
